# log-analysis-engine

./: .gitignore  README.md  main.py  pyproject.toml
app/core/: types.py
app/core/agent/: builder.py  helpers.py  model_provider.py  open_chat.py  prompts.py  state.py  tools.py
app/core/cli/: app.py
app/core/embedding/: embedder.py  indexer.py  log_chunker.py  pipeline.py
mcp/: main.py  pyproject.toml  python_mcp_server.py
mcp/core/: builder.py  logger.py  prompts.py  server.py  state.py
notebooks/: draft.ipynb  test_converter_and_chunker.ipynb
