[project]
name = "log-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.0.1",
    "langchain>=1.0.1",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=1.0.1",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.1",
]
